--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -38,9 +38,9 @@
     </div>
 
     <form id="add-timeline-post">
-      <input type="text" id="timeline-name" placeholder="Name" required>
-      <input type="email" id="timeline-email" placeholder="Email" required>
-      <input type="text" id="timeline-content" placeholder="Content" required>
+      <input type="text" id="timeline-name" placeholder="Name" >
+      <input type="email" id="timeline-email" placeholder="Email" >
+      <input type="text" id="timeline-content" placeholder="Content" >
       <button type="submit">Add Timeline Post</button>
     </form>
 
@@ -78,25 +78,61 @@
         var name = document.getElementById('timeline-name').value;
         var email = document.getElementById('timeline-email').value;
         var content = document.getElementById('timeline-content').value;
+        const validRegex = /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/;
 
-        let formData = new FormData();
-        formData.append('name', name);
-        formData.append('email', email);
-        formData.append('content', content);
+        if(!name) {
+          alert('Invalid name');
+        }
+        else if (!email.match(validRegex)) {
+          alert('Invalid email')
+        }
+        else if (!content) {
+          alert('Invalid content')
+        }
+        else {
+          let formData = new FormData();
+          formData.append('name', name);
+          formData.append('email', email);
+          formData.append('content', content);
+          fetch('/api/timeline_post', {
+            method: 'POST',
+            body: formData
+          }).then(function(response) {
+            return response.json();
+          }).then(function(data) {
+            document.getElementById('timeline-name').value = '';
+            document.getElementById('timeline-email').value = '';
+            document.getElementById('timeline-content').value = '';
 
-        fetch('/api/timeline_post', {
-          method: 'POST',
-          body: formData
-        }).then(function(response) {
-          return response.json();
-        }).then(function(data) {
-          document.getElementById('timeline-name').value = '';
-          document.getElementById('timeline-email').value = '';
-          document.getElementById('timeline-content').value = '';
-
-          populateTimeline();
-        });
+            populateTimeline();
+          });
+        }
       });
+//      document.getElementById('add-timeline-post').addEventListener('submit', function addTimelinePost(e) {
+//      e.preventDefault();
+
+//        var name = document.getElementById('timeline-name').value;
+//        var email = document.getElementById('timeline-email').value;
+//        var content = document.getElementById('timeline-content').value;
+
+//        let formData = new FormData();
+//        formData.append('name', name);
+//        formData.append('email', email);
+//        formData.append('content', content);
+
+//        fetch('/api/timeline_post', {
+//          method: 'POST',
+//          body: formData
+//        }).then(function(response) {
+//          return response.json();
+//        }).then(function(data) {
+//          document.getElementById('timeline-name').value = '';
+//          document.getElementById('timeline-email').value = '';
+//          document.getElementById('timeline-content').value = '';
+
+//          populateTimeline();
+//        });
+//      });
     </script>
 
     <style>
